--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,6 @@ axum = "0.6.18"
 serde = "1.0"
 serde_json = "1.0.96"
 derive-new = "0.5.9"
+tower-http = { version = "0.4.0", features = ["cors"] }
 
 
